fix spacing of menu icons in hz layout

--- a/css/includes/components/_global-menu.scss
+++ b/css/includes/components/_global-menu.scss
@@ -56,6 +56,12 @@
 
 .topbar {
    z-index: $zindex-fixed;
+
+   .nav-item {
+      i {
+         margin-right: 0.3em;
+      }
+   }
 }
 
 .sidebar {
